--- a/package.json
+++ b/package.json
@@ -15,22 +15,29 @@
   },
   "dependencies": {
     "@nuxt/content": "3.4.0",
-    "@nuxt/eslint": "1.3.0",
     "@nuxt/fonts": "0.11.1",
     "@nuxt/icon": "1.11.0",
     "@nuxt/image": "1.10.0",
     "@nuxt/scripts": "0.11.5",
     "@nuxt/test-utils": "3.17.2",
     "@pinia/nuxt": "0.10.1",
+    "@tailwindcss/vite": "^4.1.3",
     "@unhead/vue": "^2.0.0-rc.8",
-    "eslint": "^9.0.0",
+    "@vueuse/core": "^13.0.0",
+    "install": "^0.13.0",
     "nuxt": "^3.16.2",
     "pinia": "^3.0.1",
+    "tailwindcss": "^4.1.3",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
   "packageManager": "pnpm@10.8.0+sha512.0e82714d1b5b43c74610193cb20734897c1d00de89d0e18420aebc5977fa13d780a9cb05734624e81ebd81cc876cd464794850641c48b9544326b5622ca29971",
   "devDependencies": {
-    "@nuxtjs/tailwindcss": "^6.13.2"
+    "@iconify-json/uil": "^1.2.3",
+    "@nuxt/eslint": "1.3.0",
+    "eslint": "^9.24.0",
+    "sass": "^1.86.3",
+    "typescript": "^5.8.3",
+    "vue-tsc": "^2.2.8"
   }
 }
