--- a/.github/workflows/nuxtjs.yml
+++ b/.github/workflows/nuxtjs.yml
@@ -2,20 +2,19 @@
 name: Deploy Nuxt site to Pages
 
 on:
-  # Runs on pushes targeting the default branch
+  # Trigger workflow on push to master branch
   push:
     branches: ["master"]
-
-  # Allows you to run this workflow manually from the Actions tab
+  # Manual trigger via the Actions tab
   workflow_dispatch:
 
-# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
+# Set permissions for deploying to GitHub Pages
 permissions:
   contents: read
   pages: write
   id-token: write
 
-# Allow only one concurrent deployment, skipping runs queued between the run in-progress and the latest queued
+# Ensure only one concurrent deployment of this workflow
 concurrency:
   group: "pages"
   cancel-in-progress: false
@@ -25,50 +24,50 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      # Step 1: Checkout the code
-      - name: Checkout
+      # Step 1: Checkout code
+      - name: Checkout source code
         uses: actions/checkout@v4
 
-      # Step 2: Setup Node.js and pnpm
+      # Step 2: Setup pnpm
+      - name: Setup PNPM
+        uses: pnpm/action-setup@v2
+        with:
+          version: 7
+
+      # Step 3: Install Node.js
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: "20" # Use Node.js v20
-          cache: "pnpm"      # Cache dependencies for pnpm
+          node-version: "22"
+          cache: "pnpm"
 
-      - name: Install pnpm & enable corepack
-        run: |
-          corepack enable
-          corepack prepare pnpm@latest --activate
-
-      # Step 3: Setup Pages (specific for Nuxt configuration)
-      - name: Setup Pages
+      # Step 4: Nuxt configuration for GitHub Pages
+      - name: Configure Nuxt for static export
         uses: actions/configure-pages@v5
         with:
-          # Automatically inject router.base into Nuxt configuration file for GitHub Pages compatibility.
           static_site_generator: nuxt
 
-      # Step 4: Restore the cache for build artifacts (optional)
-      - name: Restore build cache
+      # Step 5: Restore cache for dependencies and build output
+      - name: Restore dependencies and build cache
         uses: actions/cache@v4
         with:
           path: |
             dist
             .nuxt
             node_modules
-          key: ${{ runner.os }}-pnpm-nuxt-cache-${{ hashFiles('**/pnpm-lock.yaml') }}
+          key: ${{ runner.os }}-pnpm-nuxt-${{ hashFiles('**/pnpm-lock.yaml') }}
           restore-keys: |
-            ${{ runner.os }}-pnpm-nuxt-cache-
+            ${{ runner.os }}-pnpm-nuxt-
 
-      # Step 5: Install dependencies via pnpm
-      - name: Install dependencies
+      # Step 6: Install dependencies using pnpm
+      - name: Install project dependencies
         run: pnpm install
 
-      # Step 6: Generate static files for Nuxt
-      - name: Static site generation with Nuxt
+      # Step 7: Build the static site with Nuxt
+      - name: Generate static site with Nuxt
         run: pnpm generate
 
-      # Step 7: Upload the generated static files as an artifact
+      # Step 8: Upload build to GitHub Pages artifact
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
@@ -76,13 +75,12 @@ jobs:
 
   # Deployment job
   deploy:
+    needs: build
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
-    needs: build
     steps:
-      # Deploy the artifact to GitHub Pages
-      - name: Deploy to GitHub Pages
+      - name: Deploy artifact to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
