--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "lint": "pnpm lint:eslint && pnpm lint:prettier",
     "lint:eslint": "eslint .",
     "lint:prettier": "prettier . --check",
-    "lintfix": "eslint . --fix && prettier --write --list-different ."
+    "lintfix": "eslint . --fix && prettier --write --list-different .",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@nuxt/content": "3.4.0",
@@ -36,6 +37,7 @@
     "@iconify-json/uil": "^1.2.3",
     "@nuxt/eslint": "1.3.0",
     "eslint": "^9.24.0",
+    "gh-pages": "^6.3.0",
     "sass": "^1.86.3",
     "typescript": "^5.8.3",
     "vue-tsc": "^2.2.8"
