--- a/.github/workflows/nuxtjs.yml
+++ b/.github/workflows/nuxtjs.yml
@@ -1,86 +1,48 @@
-# Workflow for building and deploying a Nuxt site to GitHub Pages using pnpm
-name: Deploy Nuxt site to Pages
 
+
+# https://github.com/actions/deploy-pages#usage
+name: Deploy to GitHub Pages
 on:
-  # Trigger workflow on push to master branch
-  push:
-    branches: ["master"]
-  # Manual trigger via the Actions tab
   workflow_dispatch:
-
-# Set permissions for deploying to GitHub Pages
-permissions:
-  contents: read
-  pages: write
-  id-token: write
-
-# Ensure only one concurrent deployment of this workflow
-concurrency:
-  group: "pages"
-  cancel-in-progress: false
-
+  push:
+    branches:
+      - main
 jobs:
-  # Build job
   build:
     runs-on: ubuntu-latest
     steps:
-      # Step 1: Checkout code
-      - name: Checkout source code
-        uses: actions/checkout@v4
-
+      - uses: actions/checkout@v4
+      - run: corepack enable
+      - uses: actions/setup-node@v4
+        with:
+          node-version: "22"
       # Step 2: Setup pnpm
       - name: Setup PNPM
         uses: pnpm/action-setup@v2
         with:
           version: 7
-
-      # Step 3: Install Node.js
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: "22"
-          cache: "pnpm"
-
-      # Step 4: Nuxt configuration for GitHub Pages
-      - name: Configure Nuxt for static export
-        uses: actions/configure-pages@v5
-        with:
-          static_site_generator: nuxt
-
-      # Step 5: Restore cache for dependencies and build output
-      - name: Restore dependencies and build cache
-        uses: actions/cache@v4
-        with:
-          path: |
-            dist
-            .nuxt
-            node_modules
-          key: ${{ runner.os }}-pnpm-nuxt-${{ hashFiles('**/pnpm-lock.yaml') }}
-          restore-keys: |
-            ${{ runner.os }}-pnpm-nuxt-
-
-      # Step 6: Install dependencies using pnpm
-      - name: Install project dependencies
-        run: pnpm install
-
-      # Step 7: Build the static site with Nuxt
-      - name: Generate static site with Nuxt
-        run: NUXT_APP_BASE_URL=/pinecone.github.io/ pnpm build --preset github_pages
-
-      # Step 8: Upload build to GitHub Pages artifact
+      # Pick your own package manager and build script
+      - run: pnpm install
+      - run: pnpm build --preset github_pages
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
           path: ./.output/public
-
   # Deployment job
   deploy:
+    # Add a dependency to the build job
     needs: build
+    # Grant GITHUB_TOKEN the permissions required to make a Pages deployment
+    permissions:
+      pages: write      # to deploy to Pages
+      id-token: write   # to verify the deployment originates from an appropriate source
+    # Deploy to the github_pages environment
     environment:
-      name: github-pages
+      name: github_pages
       url: ${{ steps.deployment.outputs.page_url }}
+    # Specify runner + deployment step
     runs-on: ubuntu-latest
     steps:
-      - name: Deploy artifact to GitHub Pages
+      - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
