--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@nuxt/eslint": "1.3.0",
     "eslint": "^9.24.0",
     "gh-pages": "^6.3.0",
+    "prettier": "^3.5.3",
     "sass": "^1.86.3",
     "typescript": "^5.8.3",
     "vue-tsc": "^2.2.8"
