--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@nuxt/image": "1.10.0",
     "@nuxt/scripts": "0.11.5",
     "@nuxt/test-utils": "3.17.2",
+    "@nuxtjs/i18n": "9.5.3",
     "@pinia/nuxt": "0.10.1",
     "@tailwindcss/vite": "^4.1.3",
     "@unhead/vue": "^2.0.0-rc.8",
