--- a/package.json
+++ b/package.json
@@ -25,11 +25,15 @@
     "@pinia/nuxt": "0.10.1",
     "@tailwindcss/vite": "^4.1.3",
     "@unhead/vue": "^2.0.0-rc.8",
+    "@vee-validate/nuxt": "^4.15.0",
+    "@vee-validate/valibot": "^4.15.0",
     "@vueuse/core": "^13.0.0",
     "install": "^0.13.0",
     "nuxt": "^3.16.2",
     "pinia": "^3.0.1",
     "tailwindcss": "^4.1.3",
+    "valibot": "^1.0.0",
+    "vee-validate": "^4.15.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
