--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@vueuse/core": "^13.0.0",
     "install": "^0.13.0",
     "nuxt": "^3.16.2",
+    "nuxt-swiper": "^2.0.0",
     "pinia": "^3.0.1",
     "tailwindcss": "^4.1.3",
     "valibot": "^1.0.0",
