--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@nuxt/icon": "1.11.0",
     "@nuxt/image": "1.10.0",
     "@nuxtjs/i18n": "9.5.3",
+    "@nuxtjs/leaflet": "^1.2.6",
     "@tailwindcss/vite": "^4.1.3",
     "@unhead/vue": "^2.0.0-rc.8",
     "@vee-validate/nuxt": "^4.15.0",
