--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "@nuxt/icon": "1.11.0",
     "@nuxt/image": "1.10.0",
     "@nuxtjs/i18n": "9.5.3",
-    "@nuxtjs/leaflet": "^1.2.6",
     "@tailwindcss/vite": "^4.1.3",
     "@unhead/vue": "^2.0.0-rc.8",
     "@vee-validate/nuxt": "^4.15.0",
@@ -37,6 +36,7 @@
   },
   "packageManager": "pnpm@10.8.0+sha512.0e82714d1b5b43c74610193cb20734897c1d00de89d0e18420aebc5977fa13d780a9cb05734624e81ebd81cc876cd464794850641c48b9544326b5622ca29971",
   "devDependencies": {
+    "@iconify-json/iconoir": "^1.2.7",
     "@iconify-json/uil": "^1.2.3",
     "@nuxt/eslint": "1.3.0",
     "eslint": "^9.24.0",
