--- a/package.json
+++ b/package.json
@@ -20,14 +20,14 @@
     "@nuxt/image": "1.10.0",
     "@nuxtjs/i18n": "9.5.3",
     "@tailwindcss/vite": "^4.1.3",
-    "@unhead/vue": "^2.0.0-rc.8",
+    "@unhead/vue": "^2.0.5",
     "@vee-validate/nuxt": "^4.15.0",
     "@vee-validate/valibot": "^4.15.0",
-    "@vueuse/core": "^13.0.0",
+    "@vueuse/core": "^13.1.0",
     "install": "^0.13.0",
     "nuxt": "^3.16.2",
     "nuxt-swiper": "^2.0.0",
-    "pinia": "^3.0.1",
+    "pinia": "^3.0.2",
     "tailwindcss": "^4.1.3",
     "valibot": "^1.0.0",
     "vee-validate": "^4.15.0",
