--- a/package.json
+++ b/package.json
@@ -18,14 +18,19 @@
     "@nuxt/fonts": "0.11.1",
     "@nuxt/icon": "1.11.0",
     "@nuxt/image": "1.10.0",
+    "@nuxt/ui": "^3.0.2",
     "@nuxtjs/i18n": "9.5.3",
+    "@prisma/client": "6.6.0",
+    "@prisma/nuxt": "^0.3.0",
     "@tailwindcss/vite": "^4.1.3",
     "@unhead/vue": "^2.0.5",
     "@vee-validate/nuxt": "^4.15.0",
     "@vee-validate/valibot": "^4.15.0",
     "@vueuse/core": "^13.1.0",
+    "dotenv": "^16.5.0",
     "install": "^0.13.0",
     "nuxt": "^3.16.2",
+    "nuxt-auth-utils": "^0.5.19",
     "nuxt-swiper": "^2.0.0",
     "pinia": "^3.0.2",
     "tailwindcss": "^4.1.3",
@@ -39,9 +44,11 @@
     "@iconify-json/iconoir": "^1.2.7",
     "@iconify-json/uil": "^1.2.3",
     "@nuxt/eslint": "1.3.0",
+    "@types/node": "^22.14.1",
     "eslint": "^9.24.0",
     "gh-pages": "^6.3.0",
     "prettier": "^3.5.3",
+    "prisma": "6.6.0",
     "sass": "^1.86.3",
     "typescript": "^5.8.3",
     "vue-tsc": "^2.2.8"
