--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@nuxtjs/i18n": "9.5.3",
     "@tailwindcss/vite": "^4.1.3",
     "@unhead/vue": "^2.0.5",
+    "@vee-validate/i18n": "^4.15.0",
     "@vee-validate/nuxt": "^4.15.0",
     "@vee-validate/valibot": "^4.15.0",
     "@vee-validate/zod": "^4.15.0",
