--- a/package.json
+++ b/package.json
@@ -39,9 +39,11 @@
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
-  "packageManager": "pnpm@10.8.0+sha512.0e82714d1b5b43c74610193cb20734897c1d00de89d0e18420aebc5977fa13d780a9cb05734624e81ebd81cc876cd464794850641c48b9544326b5622ca29971",
+  "packageManager": "pnpm@10.8.1+sha512.c50088ba998c67b8ca8c99df8a5e02fd2ae2e2b29aaf238feaa9e124248d3f48f9fb6db2424949ff901cffbb5e0f0cc1ad6aedb602cd29450751d11c35023677",
   "devDependencies": {
+    "@iconify-json/carbon": "^1.2.8",
     "@iconify-json/iconoir": "^1.2.7",
+    "@iconify-json/lucide": "^1.2.36",
     "@iconify-json/uil": "^1.2.3",
     "@nuxt/eslint": "1.3.0",
     "@types/node": "^22.14.1",
