--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@nuxt/image": "1.10.0",
     "@nuxt/ui": "^3.0.2",
     "@nuxtjs/i18n": "9.5.3",
+    "@pinia/nuxt": "0.11.0",
     "@prisma/client": "6.6.0",
     "@prisma/nuxt": "^0.3.0",
     "@tailwindcss/vite": "^4.1.3",
